# smon-toolbox

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  LICENSE.txt  README.md  pyproject.toml  uv.toml
.github/workflows/: ci.yml
data/: README.md
templates/project-template/: .gitignore  .pre-commit-config.yaml  README.md  TEMPLATE_README.md  pyproject.toml
templates/project-template/.github/workflows/: ci.yml
templates/project-template/configs/: example_config.yaml
templates/project-template/experiments/example_experiment/: README.md  demo.py
templates/project-template/notebooks/: example_notebook.ipynb
templates/project-template/scripts/: example_script.py
