[project]
name = "phd-research-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false # Mark as a container and not a package

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
