[project]
name = "smon-ws"
version = "0.1.0"
description = "The monorepo root for PhD research"
requires-python = ">=3.13"
dependencies = []

# Define this as a workspace in uv
[tool.uv]
package = false   # This is a workspace root

[tool.uv.workspace]
members = ["packages/*"]

#Global Dev Dependencies (Available to the whole repo)
[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
]

# Global Tool Configurations
[tool.black]
line-length = 108
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 108
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["packages"]  # Look for tests in the packages directory
